2006-11-05  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.6

2006-11-01  Carlos Garnacho  <carlosg@gnome.org>

	* tz-map.c (e_tz_map_new):
	* time-tool.c (init_timezone): fix potential invalid memory reads.
	hopefully fixes #363194

2006-10-30  Carlos Garnacho  <carlosg@gnome.org>

	Fix #355849

	* timeserv.[ch]: remove, code moved to ntp-servers-list.[ch]
	* Makefile.am, main.c: remove timeserv.h
	* ntp-servers-list.[ch] (toggle_ntp_server): added, safe way to toggle
	a NTP server usage.
	(on_ntp_addserver): moved from timeserv.[ch]

2006-10-05  Carlos Garnacho  <carlosg@gnome.org>

	Patch by Darren Kenny  <Darren.Kenny@Sun.COM> and Erast Benson
	<erast@gnusolaris.com> to parse correctly timezones in SunOS.

	* tz.[ch]: add SunOS specific codepaths.

2006-09-30  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.5

2006-09-23  Carlos Garnacho  <carlosg@gnome.org>

	* tz-map.c. tz-map.h (map) (unmap) (e_tz_map_new): only initialize the 
	dot blinking timeout when the world map is visible.
	* time-tool.c (gst_time_tool_run_timezone_dialog): explicitly show and
	hide the world map widget.
	* e-map/e-map.c: slight code cleanup.

2006-09-23  Carlos Garnacho  <carlosg@gnome.org>

	* tz-map.c (e_tz_map_set_tz_from_name):
	* tz.c (tz_load_db): Behave nicely with NULL and empty timezones.

2006-09-07  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.4

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.15.3

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* time-tool.c (get_ntp_service): use gst_service_get_role()

2006-09-01  Carlos Garnacho  <carlosg@gnome.org>

	* time-tool.c: separate NTP check to its own function

2006-08-29  Carlos Garnacho  <carlosg@gnome.org>

	* time-tool.[ch] (inhibit_screensaver): fix wrong g_return_if_fail.
	(on_ntp_use_toggled) (on_synchronize_now_clicked)
	(gst_time_tool_constructor) (gst_time_tool_update_gui): add
	"synchronize now" functionality.

2006-08-23  Carlos Garnacho  <carlosg@gnome.org>
