@@ -1,3 +1,9 @@
+2006-11-15  Carlos Garnacho  <carlosg@gnome.org>
+
+	* time-tool.c (gst_time_tool_close): added method implementation,
+	applies the configuration if there's a pending change when 
+	closing the tool.
+
 2006-11-05  Carlos Garnacho  <carlosg@gnome.org>
 
 	* Release 2.15.6
